; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/tegra-vde/extr_vde.c_tegra_vde_release_frame_dmabufs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/tegra-vde/extr_vde.c_tegra_vde_release_frame_dmabufs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_vde = type { i32 }
%struct.video_frame = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_vde*, %struct.video_frame*, i32, i32, i32)* @tegra_vde_release_frame_dmabufs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_vde_release_frame_dmabufs(%struct.tegra_vde* %0, %struct.video_frame* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.tegra_vde*, align 8
  %7 = alloca %struct.video_frame*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.tegra_vde* %0, %struct.tegra_vde** %6, align 8
  store %struct.video_frame* %1, %struct.video_frame** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %9, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %5
  %14 = load %struct.tegra_vde*, %struct.tegra_vde** %6, align 8
  %15 = load %struct.video_frame*, %struct.video_frame** %7, align 8
  %16 = getelementptr inbounds %struct.video_frame, %struct.video_frame* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @tegra_vde_dmabuf_cache_unmap(%struct.tegra_vde* %14, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %13, %5
  %21 = load %struct.tegra_vde*, %struct.tegra_vde** %6, align 8
  %22 = load %struct.video_frame*, %struct.video_frame** %7, align 8
  %23 = getelementptr inbounds %struct.video_frame, %struct.video_frame* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @tegra_vde_dmabuf_cache_unmap(%struct.tegra_vde* %21, i32 %24, i32 %25)
  %27 = load %struct.tegra_vde*, %struct.tegra_vde** %6, align 8
  %28 = load %struct.video_frame*, %struct.video_frame** %7, align 8
  %29 = getelementptr inbounds %struct.video_frame, %struct.video_frame* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @tegra_vde_dmabuf_cache_unmap(%struct.tegra_vde* %27, i32 %30, i32 %31)
  %33 = load %struct.tegra_vde*, %struct.tegra_vde** %6, align 8
  %34 = load %struct.video_frame*, %struct.video_frame** %7, align 8
  %35 = getelementptr inbounds %struct.video_frame, %struct.video_frame* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @tegra_vde_dmabuf_cache_unmap(%struct.tegra_vde* %33, i32 %36, i32 %37)
  ret void
}

declare dso_local i32 @tegra_vde_dmabuf_cache_unmap(%struct.tegra_vde*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
